# newsenv

./: .gitignore  NewsEnv.spec  README.md  news_gui.py  news_gui.spec  news_gui_final.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml  run-script.yml
Archive/: news_gui_tk.py  news_gui_tk_v2.py
Samples/: Results_Example.csv
