[tool.poetry]
name = "newsenv"
version = "0.1.0"
description = ""
authors = ["izzy <sethornton22@gmail.com>"]
readme = "README.md"

# Poetry wants the Python version here as a dependency too
[tool.poetry.dependencies]
python = "^3.13"

# --- Your dependencies (moved to the correct table) ---
altgraph = "0.17.4"
beautifulsoup4 = "4.13.4"
certifi = "2025.7.9"
charset-normalizer = "3.4.2"
click = "8.2.1"
contourpy = "1.3.2"
cssselect = "1.3.0"
cycler = "0.12.1"
dnspython = "2.7.0"
et-xmlfile = "2.0.0"
feedfinder2 = "0.0.4"
feedparser = "6.0.11"
filelock = "3.18.0"
fonttools = "4.58.5"
fpdf = "1.7.2"
gnews = "0.4.1"
idna = "3.10"
jieba3k = "0.35.1"
joblib = "1.5.1"
kiwisolver = "1.4.8"
lxml = "6.0.0"
lxml-html-clean = "0.4.2"
macholib = "1.16.3"
matplotlib = "3.10.3"
newspaper3k = "0.2.8"
nltk = "3.9.1"
numpy = "1.26.4"
openpyxl = "3.1.5"
packaging = "25.0"
pandas = "2.3.1"
pillow = "11.3.0"
pyarrow = "20.0.0"
pyasn1 = "0.6.1"
pyinstaller-hooks-contrib = "2025.5"
pyparsing = "3.2.3"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
pyyaml = "6.0.2"
regex = "2024.11.6"
requests = "2.32.4"
requests-file = "2.1.0"
rsa = "4.9.1"
setuptools = "80.9.0"
sgmllib3k = "1.0.0"
six = "1.17.0"
soupsieve = "2.7"
tinysegmenter = "0.3"
tldextract = "5.3.0"
tqdm = "4.67.1"
typing-extensions = "4.14.1"
tzdata = "2025.2"
urllib3 = "2.5.0"
wordcloud = "1.9.4"

# Point PySimpleGUI at its private index explicitly
PySimpleGUI = { version = "*", source = "pysimplegui" }

# --- Extra index for PySimpleGUI only ---
[[tool.poetry.source]]
name = "pysimplegui"
url = "https://PySimpleGUI.net/install"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
